# hcas

./: .gitignore  README.md  hcas.md  pyproject.toml
notebook/: plan.md  ref.geojson  test.geojson  xee_service.py
src/hcas/: __init__.py  _defaults.py  _geo.py  _hcas_scorer.py  _kde_scorer.py  _proximity.py
tests/: _data_generation.py  conftest.py  test_hcas_scorer.py  test_kde_scorer.py
