[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hcas"
version = "0.1.0"
description = "Habitat Condition Assessment Scoring — RF proximity and HCAS methods"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.22",
    "scipy>=1.8",
    "scikit-learn>=1.1",
    "xarray>=2022.3",
    "dask[array]>=2022.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hcas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
